syntax = "proto3";
package cosmos.feegrant.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos/feegrant/v1beta1/feegrant.proto";

option go_package = "github.com/cosmos/cosmos-sdk/x/feegrant/types";

// Query defines the gRPC querier service.
service Query {
  // FeeAllowance returns fee granted to the grantee by the granter.
  rpc FeeAllowance(QueryFeeAllowanceRequest) returns (QueryFeeAllowanceResponse) {}
}

// QueryFeeAllowanceRequest is the request type for the Query/FeeAllowance RPC method.
message QueryFeeAllowanceRequest {
  option (gogoproto.equal)           = false;
  option (gogoproto.goproto_getters) = false;

  string granter = 1;
  string grantee = 2;
}

// QueryFeeAllowanceResponse is the response type for the Query/FeeAllowance RPC method.
message QueryFeeAllowanceResponse {
  // fee_allowance is a fee_allowance granted for grantee by granter.
  cosmos.feegrant.v1beta1.FeeAllowanceGrant fee_allowance = 1;
}
